--- a/CulnryBookUP/Views/Home/Index.cshtml
+++ b/CulnryBookUP/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<CulnryBookUP.Models.User>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <input type="button" value="Авторизоваться" onclick="window.location='@Url.Action("Index", "Account")'" />
-</div>
+<link rel="stylesheet" href="~/css/site.css" />
+
+<h2>Clients</h2>
+
+<table class="table-bordered">
+    <thead>
+        <tr>
+            <th>IdAutor</th>
+            <th>Login</th>
+            <th>Password</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.UserName</td>
+                <td>@item.Login</td>
+                <td>@item.Password</td>
+            </tr>
+        }
+    </tbody>
+</table>
