--- a/CulnryBookUP/wwwroot/css/form.css
+++ b/CulnryBookUP/wwwroot/css/form.css
@@ -115,6 +115,19 @@ body {
         font-style: italic;
     }
 
+.input-field-error{
+    width: 100%;
+    background: rgba(250, 245, 235, 0.7);
+    border: 1px solid #c16969;
+    padding: 0.9rem 1.5rem;
+    font-size: 1rem;
+    color: #3f3a32;
+    outline: none;
+    transition: all 0.2s ease;
+    box-shadow: inset 3px 3px 8px rgba(160, 130, 90, 0.05), 0 2px 2px rgba(255, 250, 240, 0.8);
+}
+
+
 .flex-row {
     display: flex;
     align-items: center;
@@ -264,7 +277,6 @@ body {
     opacity: 0.3;
 }
 
-/* адаптация */
 @media (max-width: 400px) {
     .login-card {
         padding: 1.8rem 1.2rem 2rem;
