--- a/CulnryBookUP/Views/Shared/_Layout.cshtml.css
+++ b/CulnryBookUP/Views/Shared/_Layout.cshtml.css
@@ -40,7 +40,7 @@ button.accept-policy {
 }
 
 .footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
