--- a/CulnryBookUP/Views/Register/Index.cshtml
+++ b/CulnryBookUP/Views/Register/Index.cshtml
@@ -14,7 +14,7 @@
             </div>
 
             <!-- форма регистрации с четырьмя полями: name, login, password, email -->
-            <form method="post" action="/Register/Index" onsubmit="check">
+            <form method="post" action="/Register/Index" onsubmit="">
                 <!-- поле NAME -->
                 <div class="input-group">
                     <label class="input-label" for="name">имя</label>
