--- a/CulnryBookUP/Views/Account/Index.cshtml
+++ b/CulnryBookUP/Views/Account/Index.cshtml
@@ -45,10 +45,13 @@
                         if (xhr.status === 200) {
                             
                             var response = JSON.parse(xhr.responseText);
+                            var role = JSON.parse(xhr.responseText);
+
                             if (response.success) {
                                 window.location.href = '/Recipe/Index';
                                 alert('Вход выполнен!');
-                            } else {
+                            }
+                            else {
                                 alert('Неправильный логин или пароль');
                                 document.getElementById('login').classList.add('input-field-error');
                                 document.getElementById('password').classList.add('input-field-error');
